--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <!-- jumbotron -->
     <section class="jumbotron text-center">
-        <img src="https://raw.githubusercontent.com/RAMALANHEKING99/RAMALANHEKING99/refs/heads/main/alan1.jpeg" alt="alanto" width="200" class="rounded-circle img-thumbnail">
+        <img src="img/SNOW_20250713_095554_180.jpg" alt="alanto" width="200" class="rounded-circle img-thumbnail">
         <h1 class="display-4">intan</h1>
         <p class="lead">Developer | Full Stack</p>
 
@@ -192,7 +192,7 @@
 
     <!-- footer-->
     <footer class="bg-primary text-white text-center pb-3">
-      <p>Created with <i class="fa-brands fa-instagram"></i> by <a href="https://www.instagram.com/gabut0_0" class="text-white fw-bold">alanto</a></p>
+      <p>Created with <i class="fa-brands fa-instagram"></i> by <a href="https://www.instagram.com/eni1w_" class="text-white fw-bold">alanto</a></p>
       
       
     </footer>
